force-app/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>