force-app/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Error_Type__c</fullName>
    <label>Error Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>