force-app/main/default/objects/conference360__Webinar_Account__c/fields/conference360__First_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>