force-app/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Organizer_Key__c.field-meta.xml
<CustomField>
    <fullName>conference360__Organizer_Key__c</fullName>
    <label>Organizer Key</label>
    <length>150</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>