force-app/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Provider__c.field-meta.xml
<CustomField>
    <fullName>conference360__Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GoToWebinar</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>WebEx</fullName>
            </value>
            <value>
                <fullName>Zoom Meeting</fullName>
                <isActive>false</isActive>
                <label>Zoom Meeting</label>
            </value>
            <value>
                <fullName>Zoom Webinar</fullName>
                <isActive>false</isActive>
                <label>Zoom Webinar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>