force-app/main/default/objects/conference360__Webinar_Account__c/fields/conference360__Refresh_Token_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>conference360__Refresh_Token_Valid_Till__c</fullName>
    <description>End date of the event.</description>
    <inlineHelpText>This is the time after which the Refresh token expires. Set automatcially</inlineHelpText>
    <label>Refresh Token Valid Till</label>
    <type>DateTime</type>
</CustomField>